# backend

./: .dockerignore  .env.sample  DEVELOPER.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 087eee637126_update_message_type.py  1eea560ca34f_init_migration.py  c3508c834c40_add_chats_table.py  d48439615925_change_user_id_from_uuid_to_string_in_.py  f27f75ea4c47_add_messages_table.py
app/: main.py  models.py
app/api/: auth.py  depends.py  main.py
app/api/routes/: chat.py  health.py  messages.py  model.py
app/core/: __init__.py  auth.py  config.py  db.py  logging.py
app/repositories/: __init__.py  chat.py  message.py  model.py
app/services/: chat.py  message.py  model.py
app/tests/: conftest.py
app/tests/api/: test_auth.py
app/tests/repositories/: test_chat.py  test_message.py  test_model.py
app/tests/routes/: test_chatapi.py  test_health.py  test_messagesapi.py  test_modelapi.py
app/tests/services/: test_chatservice.py  test_messageservice.py  test_modelservice.py
doc/: db.dbml  openapi.yml
