[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "fastapi[standard]>=0.119.1",
    "psycopg[binary]>=3.2.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
